k8s-deployments/01-manual/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manual
spec:
  rules:
    - http:
        paths:
          - path: /manual-dev(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: manual-dev
                port:
                  number: 3000
